tests/language_tests/pass/0129_nested_array_indexing_and_assignment.ee
fn main() {
    let values = [[1, 2], [3, 4]];
    println(values[0][1]);
    values[1][0] = 30;
    println(values[1][0]);
}
