tests/language_tests/fail/0089_array_write_negative_index.ee
fn main() {
    let values = [1, 2, 3];
    values[-1] = 9;
}
